remove totalpages from pageresult